--- a/5.10p.config
+++ b/5.10p.config
@@ -218,8 +218,8 @@ CONFIG_PACKAGE_kmod-wlcore=y
 CONFIG_PACKAGE_kmod-zd1211rw=y
 
 # 常用LuCI插件选择:
-CONFIG_PACKAGE_netdata=y
-CONFIG_PACKAGE_luci-app-netdata-cn=y
+# CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-wireguard=y
