--- a/5.10d.config
+++ b/5.10d.config
@@ -237,7 +237,7 @@ CONFIG_PACKAGE_uqmi=y
 
 # 常用LuCI插件选择:
 CONFIG_PACKAGE_netdata=y
-CONFIG_PACKAGE_luci-app-netdata-cn=y
+CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-wireguard=y
@@ -291,8 +291,8 @@ CONFIG_PACKAGE_luci-app-verysync=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_aliyundrive-webdav=y
 CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
-# CONFIG_PACKAGE_alist=y
-# CONFIG_PACKAGE_luci-app-alist=y
+CONFIG_PACKAGE_alist=y
+CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_webd=y
 CONFIG_PACKAGE_luci-app-webd=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
