--- a/5.10p.config
+++ b/5.10p.config
@@ -218,7 +218,7 @@ CONFIG_PACKAGE_kmod-wlcore=y
 CONFIG_PACKAGE_kmod-zd1211rw=y
 
 # 常用LuCI插件选择:
-# CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-ttyd=y
@@ -266,10 +266,10 @@ CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-nfs=y
 # CONFIG_PACKAGE_luci-app-verysync=y
 CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_aliyundrive-webdav=y
-CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
-# CONFIG_PACKAGE_alist=y
-# CONFIG_PACKAGE_luci-app-alist=y
+# CONFIG_PACKAGE_aliyundrive-webdav=y
+# CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+CONFIG_PACKAGE_alist=y
+CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_webd=y
 CONFIG_PACKAGE_luci-app-webd=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
