--- a/.config
+++ b/.config
@@ -59,7 +59,7 @@ CONFIG_PACKAGE_kmod-usb2-pci=y
 CONFIG_PACKAGE_kmod-usb3=y
 
 # 常用LuCI插件选择:
-CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_netdata-cn=y
 CONFIG_PACKAGE_luci-app-netdata-cn=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-app-ttyd=y
@@ -106,8 +106,8 @@ CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-vsftpd=n
 # CONFIG_PACKAGE_aliyundrive-webdav=y
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
-# CONFIG_PACKAGE_alist=y
-# CONFIG_PACKAGE_luci-app-alist=y
+CONFIG_PACKAGE_alist=y
+CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-baidupcs-web=y
 # CONFIG_PACKAGE_luci-app-gowebdav=y
 # CONFIG_PACKAGE_luci-app-hd-idle=y
