--- a/5.10d.config
+++ b/5.10d.config
@@ -296,7 +296,7 @@ CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_webd=y
 CONFIG_PACKAGE_luci-app-webd=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
-CONFIG_PACKAGE_luci-app-gowebdav=y
+# CONFIG_PACKAGE_luci-app-gowebdav=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-rclone=y
 CONFIG_PACKAGE_luci-app-minidlna=y
